Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="cta" aria-label="Primary actions">
       <!-- The site had a Telegram join link. If you know the exact t.me channel,https://t.me/+73lNf9PoeBU1NGQ1 replace the href below with that full link. -->
-      <a class="btn btn-telegram" href="https://t.me" target="_blank" rel="noopener noreferrer">Join Telegram Now</a>
+      <a https://t.me/+bTYcSJbPKt5jNTk1"noopener noreferrer">Join Telegram Now</a>
       <a class="btn" href="#proof" style="background:transparent;border:1px solid rgba(255,255,255,0.06);color:#dbeafe">View Winning Proof</a>
     </div>
 
@@ -79,3 +79,4 @@
   </script>
 </body>
 </html>
+
